--- a/ms-challenges/package.json
+++ b/ms-challenges/package.json
@@ -30,6 +30,7 @@
     "amqp-connection-manager": "^3.2.2",
     "amqplib": "^0.7.1",
     "dotenv": "^8.2.0",
+    "moment-timezone": "^0.5.33",
     "mongoose": "^5.12.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
