--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -22,9 +22,11 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.6.15",
+    "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.15",
     "@nestjs/microservices": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
+    "amazon-cognito-identity-js": "^4.6.0",
     "amqp-connection-manager": "^3.2.2",
     "amqplib": "^0.7.1",
     "class-transformer": "^0.4.0",
